--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
             <hr color="black"> 
                 <div claas="social">
                     <h4>Мои социальные сети</h4>
-                    <ul type="square">
+                    <ul type="square"> 
+                        <!-- каждый элемент списка должен быть в своём <li></li>   -->
                         Facebook
                         |
                         Instagram
                         |
-                        <a href="https://www.youtube.com/channel/UCufCUZqfsKn0J8JFfTV6seg" target="_blank">YouTube</a></li>
+                        <a href="https://www.youtube.com/channel/UCufCUZqfsKn0J8JFfTV6seg" target="_blank">YouTube</a></li> <!-- где ответный тэг <li> ?   -->
                     </ul>
                     </div>
                     <div class="card bg-green">
